# luxin

./: .gitignore  .readthedocs.yml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
assets/: README.md
docs/: api-reference.md  examples.md  getting-started.md  index.md  migration.md  roadmap.md  troubleshooting.md  user-guide.md
examples/: 01_getting_started.ipynb  02_sales_analysis.ipynb  03_multi_column_groupby.ipynb  README.md  basic_usage.py  sales_analysis.py
luxin/: __init__.py  config.py  display.py  drill_table.py  inspector.py  polars_support.py  streamlit_backend.py  tracked_df.py  utils.py  validation.py
luxin/components/: __init__.py  detail_panel.py  export.py  filters.py  table_view.py
luxin/static/: table.css  table.js
luxin/templates/: table.html
tests/: __init__.py  test_components.py  test_components_comprehensive.py  test_config.py  test_detail_panel_comprehensive.py  test_export.py  test_export_comprehensive.py  test_filters.py  test_init.py  test_inspector.py  test_integration.py  test_polars.py  test_polars_edge_cases.py  test_table_view_edge_cases.py  test_tracked_df_comprehensive.py  test_utils.py  test_utils_comprehensive.py  test_validation.py  test_validation_comprehensive.py
