[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "luxin"
version = "0.1.0"
description = "Interactive HTML tables with drill-down capabilities for exploring aggregated data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "ipython>=7.0.0",
]
license = {text = "MIT License"}
keywords = ["dataframe", "visualization", "jupyter", "streamlit", "interactive", "drill-down"]
authors = [
    {name = "Odos Matthews", email = "odosmatthews@gmail.com"}
]

[project.optional-dependencies]
polars = ["polars>=0.20.0"]
streamlit = ["streamlit>=1.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "jupyter>=1.0.0",
    "notebook>=6.0.0",
]

[tool.setuptools.packages]
find = {}

[project.urls]
Repository = "https://github.com/eddiethedean/luxin"

