[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "luxin"
version = "0.2.0"
description = "Streamlit-first interactive data exploration with drill-down capabilities for exploring aggregated data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "streamlit>=1.0.0",
    "ipython>=7.0.0",
]
license = {text = "MIT"}
keywords = ["dataframe", "visualization", "streamlit", "jupyter", "interactive", "drill-down", "data-exploration"]
authors = [
    {name = "Odos Matthews", email = "odosmatthews@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Streamlit",
    "Framework :: Jupyter",
]

[project.optional-dependencies]
polars = ["polars>=0.20.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "jupyter>=1.0.0",
    "notebook>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["luxin*"]

[tool.setuptools.package-data]
luxin = [
    "static/*.css",
    "static/*.js",
    "templates/*.html"
]

[project.urls]
Repository = "https://github.com/eddiethedean/luxin"
Homepage = "https://github.com/eddiethedean/luxin"
"Bug Tracker" = "https://github.com/eddiethedean/luxin/issues"

